syntax = "proto3";

package runtime.api.config.security.authn.basic.v1;

option go_package = "github.com/origadmin/runtime/api/gen/go/config/security/authn/basic/v1;basicv1";

// BasicCredential holds the credentials for HTTP Basic authentication.
message BasicCredential {
  string username = 1;
  string password = 2;
}
