syntax = "proto3";

package runtime.api.config.security.v1;

import "config/security/authn/apikey/v1/credential.proto";
import "config/security/authn/basic/v1/credential.proto";
import "config/security/authn/oidc/v1/credential.proto";
import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto"; // Import struct.proto for Value
import "validate/validate.proto";

option go_package = "github.com/origadmin/runtime/api/gen/go/config/security/v1;securityv1";

message Payload {
  // Basic authentication credential.
  optional runtime.api.config.security.authn.basic.v1.BasicCredential basic = 10 [
    json_name = "basic",
    (gnostic.openapi.v3.property) = {description: "Basic authentication credential."}
  ];

  // API Key or Preshared Key credential.
  optional runtime.api.config.security.authn.apikey.v1.KeyCredential key = 11 [
    json_name = "key",
    (gnostic.openapi.v3.property) = {description: "API Key or Preshared Key credential."}
  ];

  // OIDC credential.
  optional runtime.api.config.security.authn.oidc.v1.OidcCredential oidc = 12 [
    json_name = "oidc",
    (gnostic.openapi.v3.property) = {description: "OIDC credential."}
  ];

  // Token-based credential (JWT, OAuth2).
  optional TokenCredential token = 13 [
    json_name = "token",
    (gnostic.openapi.v3.property) = {description: "Token-based credential (JWT, OAuth2)."}
  ];

  // Raw serialized data for unsupported credential types.
  optional string raw_data = 14 [
    json_name = "rawData",
    (gnostic.openapi.v3.property) = {description: "Raw serialized data for unsupported credential types."}
  ];
}

// Credential is a generic container for transmitting credential data between services.
// It carries the raw credential string and optionally a parsed, structured payload.
message CredentialSource {
  // Type indicates the kind of credential, e.g., "jwt", "apikey", "basic".
  // This helps the receiving service understand how to interpret the raw data or payload.
  string type = 1 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "Type of the credential (e.g., 'jwt', 'apikey')."}
  ];

  // Raw contains the original, unparsed credential string.
  // For example, the full "Bearer eyJ..." JWT string, or the API key string.
  string raw = 2 [
    json_name = "raw",
    (gnostic.openapi.v3.property) = {description: "Original, unparsed credential string."}
  ];

  // ParsedPayload optionally contains a structured representation of the credential.
  // This can be used if the sending service (e.g., Gateway) has already
  // performed some parsing and wants to avoid re-parsing on the receiving end.
  // The type of the message inside Any should correspond to the 'type' field.
  google.protobuf.Any payload = 3 [
    json_name = "payload",
    (gnostic.openapi.v3.property) = {description: "Optional structured payload of the credential."}
  ];

  map<string, google.protobuf.Any> meta = 4 [
    json_name = "meta",
    (gnostic.openapi.v3.property) = {description: "Optional metadata of the credential."}
  ];
}

// CredentialResponse represents a credential structure intended for
// transmission to clients (e.g., frontend applications). It contains
// processed and safe-to-expose credential information.
// It uses optional fields for credential data, allowing application logic
// to enforce that only one is meaningfully populated.
message CredentialResponse {
  // Type indicates the kind of credential, e.g., "jwt", "apikey", "basic".
  // This helps the receiving client understand how to interpret the payload.
  string type = 1 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "Type of the credential (e.g., 'jwt', 'apikey')."}
  ];

  // Payload contains the credential data, which is a union of all possible
  // credential types. The client should use the 'type' field to determine
  // which specific credential data to use.
  Payload payload = 2 [
    json_name = "payload",
    (gnostic.openapi.v3.property) = {description: "Credential data, which is a union of all possible credential types."}
  ];

  // Optional metadata of the credential, using google.protobuf.Value for
  // more direct JSON serialization.
  map<string, google.protobuf.Value> meta = 4 [
    json_name = "meta",
    (gnostic.openapi.v3.property) = {description: "Optional metadata of the credential."}
  ];
}

// TokenCredential holds the credentials for token-based authentication flows
// like OAuth2 and JWT. It is a shared structure representing the typical
// payload returned from a token endpoint.
message TokenCredential {
  // The access token used for authentication.
  string access_token = 1 [
    json_name = "accessToken",
    (validate.rules).string.min_len = 1,
    (gnostic.openapi.v3.property) = {description: "The access token used for authentication."}
  ];

  // The refresh token used to obtain a new access token.
  string refresh_token = 2 [
    json_name = "refreshToken",
    (gnostic.openapi.v3.property) = {description: "The refresh token used to obtain a new access token."}
  ];

  // The remaining lifetime of the access token in seconds.
  int64 expires_in = 3 [
    json_name = "expiresIn",
    (gnostic.openapi.v3.property) = {description: "The remaining lifetime of the access token in seconds."}
  ];

  // The type of the token, typically "Bearer".
  string token_type = 4 [
    json_name = "tokenType",
    (gnostic.openapi.v3.property) = {description: "The type of the token, typically 'Bearer'."}
  ];
}
